(library
  (name ppx_distr_guards)
  (modules ppx_distr_guards)
  (libraries ocaml-migrate-parsetree)
  (kind ppx_rewriter)
)

; https://tarides.com/blog/2019-05-09-an-introduction-to-ocaml-ppx-ecosystem#testing-your-ppx
(executable
  (name standalone)
  (modules standalone)
  (libraries ppx_distr_guards)
)

(test
  (name test)
  (modules test)
  (preprocess (pps ppx_distr_guards))
)

(rule
 (targets test.actual.ml)
 (deps (:pp standalone.exe) (:input test.ml))
 (action (run ./standalone.exe --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action (diff test.expected.ml test.actual.ml)))
